// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor renders correctly 1`] = `
<a
  tabIndex={0}
/>
`;

exports[`Anchor renders correctly 2`] = `
<a
  tabIndex={0}
>
  <span>
    testing 123
  </span>
  <div>
    testing456
  </div>
</a>
`;

exports[`Anchor renders correctly with ARIA-label 1`] = `
<a
  aria-label="anchor text as ARIA-label"
  tabIndex={0}
>
  anchor text as ARIA-label
</a>
`;

exports[`Anchor renders correctly with ARIA-label 2`] = `
<a
  aria-label="ARIA-label"
  tabIndex={0}
>
  anchor text, not ARIA
</a>
`;

exports[`Anchor renders correctly with ARIA-label 3`] = `
<a
  aria-label="title shown as ARIA-label"
  tabIndex={0}
  title="title shown as ARIA-label"
>
  anchor text, not ARIA
</a>
`;

exports[`Anchor renders correctly with ARIA-label 4`] = `
<a
  aria-label="ariaLabel shown as ARIA-label"
  tabIndex={0}
  title="this should not be shown as ARIA-label"
>
  anchor text, not ARIA
</a>
`;

exports[`Anchor renders correctly with ARIA-label 5`] = `
<a
  aria-label="title shown as ARIA-label"
  tabIndex={0}
  title="title shown as ARIA-label"
>
  <span>
    testing 123
  </span>
  <div>
    testing456
  </div>
</a>
`;

exports[`Anchor renders correctly with ARIA-label 6`] = `
<a
  aria-label="ariaLabel shown as ARIA-label"
  tabIndex={0}
>
  <span>
    testing 123
  </span>
  <div>
    testing456
  </div>
</a>
`;

exports[`Anchor renders correctly with CSS class 1`] = `
<a
  aria-label="test anchor"
  className="css-class-name"
  tabIndex={0}
>
  test anchor
</a>
`;

exports[`Anchor renders correctly with href 1`] = `
<a
  aria-label="test anchor"
  href="https://fd.nl"
  tabIndex={0}
>
  test anchor
</a>
`;

exports[`Anchor renders correctly with tabIndex 1`] = `
<a
  aria-label="test anchor"
  tabIndex="2"
>
  test anchor
</a>
`;

exports[`Anchor renders correctly with tabIndex 2`] = `
<a
  aria-label="test anchor"
  tabIndex="-1"
>
  test anchor
</a>
`;
